Fixed some spacing, allowed negative refresh times

--- a/ButtsBlazor/wwwroot/app.css
+++ b/ButtsBlazor/wwwroot/app.css
@@ -357,12 +357,12 @@ div.fullscreen {
     border-radius: 10px; /* regular */
     opacity: 0.7;
     background-color: #DDDE;
-    padding: 1vw 1vh;
+    padding: 1vh 2vw;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
     margin-bottom: 2vh;
-    left: 5%;
+    left: 4%;
     align-items: center;
 }
 .image-controls .image-control {
